@@ -1,3 +1,6 @@
+2.4.1
+  - Improved responsiveness when SQL exception occurs.
+
 2.4
   - Fixed an issue with exporting dependencies of Initial Tables. (thanks to Teddy Widom, https://sourceforge.net/p/jailer/discussion/700499/thread/60e83aef/)
 
